# Gra_Wisielec

./: .gitignore  CMakeLists.txt  Hasła.docx  README.md  Wizualizacja.pptx  Zadania.docx  gra.cpp  kat_losowanie.cpp  losowanie.rar  main.cpp  menu.cpp  test1.cpp  test2.cpp  wszystko.h
.github/workflows/: CI.yml  c-cpp.yml  cmake.yml  linter.yml  stale.yml
kategorie/: IMIĘ.txt  JEDZENIE.txt  MIASTA.txt  PAŃSTWA.txt  ROŚLINA.txt  SPORT.txt  ZAWÓD.txt  ZWIERZĘ.txt  jedzenie.txt  sport.txt  zawod.txt
wisielec/: imie.txt  kat_losowanie.cpp  main.cpp  menu.cpp  miasto.txt  panstwo.txt  roslina.txt  rysowanie_wisielca.txt  test.cpp  wszystko.h  zwierze.txt
